crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__bytes_literal.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\n#\"00\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Bytes(
        [
            0,
        ],
    ),
}
