crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__bytes_literal_odd_length.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\n#\"0\""
info: diagnostic
---
nash::syntax

  × Byte string has an odd number of hexadecimal digits.
   ╭─[src/Main.nash:1:1]
 1 │ #"0"
   · ─
   ╰────
  help: Use two hexadecimal digits per byte.
