crates/nash-parse/src/pattern/snapshots/nash_parse__pattern__term__tests__error_char_literal.snap
---
source: crates/nash-parse/src/pattern/term.rs
description: "Code:\n\n'x'"
info: diagnostic
---
nash::syntax

  × Expected an argument pattern.
   ╭─[src/Main.nash:1:1]
 1 │ 'x'
   · ─
   ╰────
  help: Use a variable, constructor pattern, or `_`.
